@startuml
note as n1
<b>Could be added:</b>
* New factories:
    TokStokFactory,
    CampoLargoFactory,
    ...
end note

note as n2
const factory = new IkeaFactory();
const chair = factory.createChair();
end note

abstract class Factory {
    + createChair(): Chair {\n    // <b>The Factory Method!</b>\n    // Implementation is optional\n    // usually empty\n}
    + cleaning(): boolean {}
}

class IkeaFactory extends Factory {
    + createChair(): Chair {\n    // implementation is optional\n    return new IkeaChair();\n}
}

interface Chair {
    + style(): string;
}

class IkeaChair implements Chair {
    style(): string {}
}

Factory <-- Chair
IkeaFactory <-- Chair
IkeaFactory o-- IkeaChair
@enduml